--- a/Building_chatbot_with_coversational_history/Chatbots.ipynb
+++ b/Building_chatbot_with_coversational_history/Chatbots.ipynb
@@ -17,41 +17,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "groq_api_key=os.getenv(\"GROQ_API_KEY\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'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'"
+       "ChatGroq(client=<groq.resources.chat.completions.Completions object at 0x000001362ECEAD10>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x000001362ECEA050>, model_name='Gemma2-9b-It', model_kwargs={}, groq_api_key=SecretStr('**********'))"
       ]
      },
      "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()\n",
-    "\n",
-    "groq_api_key=os.getenv(\"GROQ_API_KEY\")\n",
-    "groq_api_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ChatGroq(client=<groq.resources.chat.completions.Completions object at 0x00000245A024D720>, async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x00000245A024E3E0>, model_name='Gemma2-9b-It', model_kwargs={}, groq_api_key=SecretStr('**********'))"
-      ]
-     },
-     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
